--- a/platformio.ini
+++ b/platformio.ini
@@ -16,5 +16,4 @@ monitor_port = COM3
 upload_port = COM3
 monitor_speed = 115200
 lib_deps = 
-	tzapu/WiFiManager@^2.0.17
-	knolleary/PubSubClient@^2.8
+	adafruit/DHT sensor library@^1.4.6
