Feature : Ajout Librairie Accelerometre + Detection droite / gauche + mouvement

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,4 @@ framework = arduino
 monitor_port = COM3
 upload_port = COM3
 monitor_speed = 115200
-lib_deps = 
-	tzapu/WiFiManager@^2.0.17
-	knolleary/PubSubClient@^2.8
+lib_deps = adafruit/Adafruit MMA8451 Library@^1.2.3
