--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,6 @@ framework = arduino
 monitor_port = COM3
 upload_port = COM3
 monitor_speed = 115200
-lib_deps = adafruit/Adafruit MMA8451 Library@^1.2.3
+lib_deps = 
+	adafruit/Adafruit MMA8451 Library@^1.2.3
+	xtor/XTor_KY037@^1.0.1
