chore: fix build

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,12 @@
 platform = espressif32
 board = az-delivery-devkit-v4
 framework = arduino
-monitor_port = COM5
-upload_port = COM5
+monitor_port = COM3
+upload_port = COM3
 monitor_speed = 115200
 lib_deps = 
 	tzapu/WiFiManager@^2.0.17
 	knolleary/PubSubClient@^2.8
+	adafruit/Adafruit MMA8451 Library@^1.2.3
+	xtor/XTor_KY037@^1.0.1
+	adafruit/Adafruit BusIO@^1.17.0
